# SearchEngine

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
api/: README.md
api/app/: __init__.py  main.py
api/tests/: __init__.py  test_main.py
engine/: CMakeLists.txt  Dockerfile  README.md
engine/include/: engine.h
engine/src/: engine.cpp  main.cpp
engine/tests/: engine_test.cpp  test_engine.cpp
eval/: README.md
infra/: README.md  docker-compose.yml
infra/db/: init.sql
ingest/: README.md  hn_fetch.py  test_hn_fetch.py
ml/: README.md
web/: README.md  index.html  package-lock.json
web/src/: App.css  App.jsx  index.css
